--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.0.0
-scikit-learn==1.3.0
-pandas==2.1.1
 numpy==1.24.3
+pandas==2.1.1
+scikit-learn==1.3.0
 gunicorn==21.2.0
+xgboost==1.7.6
+pymongo==4.5.0
